chore: add some docs, php example and padding to output

--- a/styles/base.css
+++ b/styles/base.css
@@ -1,6 +1,6 @@
 .highlight {
-    display: grid;
-    grid-template-columns: auto 1fr;
+    /* display: grid; */
+    /* grid-template-columns: auto 1fr; */
     border-radius: 5px;
     overflow: hidden;
 }
@@ -11,6 +11,10 @@
 
 .line {
     display: contents;
+}
+
+.highlight pre {
+    margin: 0;
 }
 
 .line-number {
